fixed the overflow message

--- a/indexcsstyle.css
+++ b/indexcsstyle.css
@@ -444,8 +444,7 @@ input[type=text], input[type=number],input[type=email],input[type=password]{
     right: 15px;
     border: 3px solid #f1f1f1;
     z-index: 9;
-    
-    
+    overflow: hidden;
 }
 .chatbox-contianer{
     max-width: 300px;
@@ -464,7 +463,14 @@ input[type=text], input[type=number],input[type=email],input[type=password]{
     background: #f1f1f1;
     resize: none;
     min-height: 10px;
-    overflow-y: scroll;
+}
+#messages{
+    width: 100%;
+    height: 50%;
+    overflow: hidden;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
 }
 .chatbox-contianer .btn-chat{
     padding: 5px;
@@ -482,11 +488,15 @@ input[type=text], input[type=number],input[type=email],input[type=password]{
     border: none;
     font-size: 18px;
     left: 20px;
+    position: sticky;
 }
 
 .user-message{
     background: rgb(128, 172, 238);
     margin-bottom: 10px;
+    border: none;
+    padding: 5px;
+    width: auto;
 }
 .bot-message{
     background: rgb(161, 245, 234);
